------------------------------------------------------------------------------
  qSharp 2.0.2 [2014.06.06]
------------------------------------------------------------------------------

  - Improve performance while retrieving large data samples
  - API: configurable maximum size of data chunk during data retrieval

------------------------------------------------------------------------------
  qSharp 2.0.1 [2014.05.26]
------------------------------------------------------------------------------

  - Fix: creation of q dictionary with values represented as table

------------------------------------------------------------------------------
  qSharp 2.0 [2014.04.02]
------------------------------------------------------------------------------

  - Support for kdb+ protocol and types: v3.0, v2.6, v<=2.5
  - Synchronous and asynchronous queries
  - Convenient asynchronous callbacks mechanism
  - Logging of the raw protocol data in case of parsing failure