@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+  qSharp 2.0.3 [2014.06.10]
+------------------------------------------------------------------------------
+
+  - Fix: behaviour of toString and fromString methods in QTime, QSecond
+         and QMinute types for dates outside of 0-24 hours scope
+
+------------------------------------------------------------------------------
   qSharp 2.0.2 [2014.06.06]
 ------------------------------------------------------------------------------
 
